@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.229
+    Translation of CVS Revision: 1.232
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -112,6 +112,15 @@
 	
 	<tr>
 	  <td>Stable</td>
+	  <td>2.6.0</td>
+	  <td>
+	    <a href="../doc/v2.6/Documentation/out-www/">Documentation</a>,
+	    <a href="install/#2.6">t&eacute;l&eacute;chargement</a>.
+	  </td>
+	</tr>
+
+	<tr>
+	  <td>Ancienne</td>
 	  <td>2.4.6</td>
 	  <td>
 	    <a href="../doc/v2.4/Documentation/out-www/">Documentation</a>,
@@ -120,28 +129,10 @@
 	</tr>
 
 	<tr>
-	  <td>D&eacute;veloppement</td>
-	  <td>2.5.32</td>
-	  <td>
-	    <a href="../doc/v2.5/Documentation/out-www/">Documentation</a>,
-	    <a href="install/#2.5">t&eacute;l&eacute;chargement</a>.
-	  </td>
-	</tr>
-
-	<tr>
-	  <td>Ancienne</td>
+	  <td>Tr&egrave;s ancienne</td>
 	  <td>2.2.6</td>
 	  <td>
 	    <a href="../doc/v2.2/Documentation/out-www/">Documentation</a>,
-	    <a href="install/#2.2">t&eacute;l&eacute;chargement</a>.
-	  </td>
-	</tr>
-
-	<tr>
-	  <td>Tr&egrave;s ancienne</td>
-	  <td>2.0.3</td>
-	  <td>
-	    <a href="../doc/v2.0/Documentation/out-www/">Documentation</a>,
 	    <a href="install/older-versions.html#2.0">t&eacute;l&eacute;chargement</a>.
 	  </td>
 	</tr>
