@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.35
+    Translation of CVS Revision: 1.37
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -17,12 +17,12 @@
 </p>
 
 
-<h2>T&eacute;l&eacute;charger LilyPond 2.4 -- version stable</h2>
+<h2>T&eacute;l&eacute;charger LilyPond 2.6 -- version stable</h2>
 
 
-<strong>Note</strong> <a name="ec-fonts"></a>
-LilyPond 2.4 n&eacute;cessite le paquet <tt>ec-fonts-mftraced</tt> t&eacute;l&eacute;chargeable
-<a href="http://lilypond.org/download/fonts/">ici</a>
+<strong>Note</strong> <a name="gs815"></a>
+LilyPond 2.6 n&eacute;cessite la version 8.15 ou plus r&eacute;cente de <a
+href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
 
 <a name="2.4"></a>
 <table width="100%" border="0" rules="rows" cellpadding="3">
@@ -41,33 +41,21 @@ LilyPond 2.4 n&eacute;cessite le paquet <tt>ec-fonts-mftraced</tt> t&eacute;l&ea
 
 </table>
 
-<h2>T&eacute;l&eacute;charger LilyPond 2.5 -- version de d&eacute;veloppement</h2>
+<h2>T&eacute;l&eacute;charger LilyPond 2.7 -- version de d&eacute;veloppement</h2>
 
-<strong>Note</strong> <a name="gs815"></a>
-LilyPond 2.5 n&eacute;cessite la version 8.15 ou plus r&eacute;cente de <a
-href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
-
-<a name="2.5"></a>
-<table width="100%" border="0" rules="rows" cellpadding="3">
-    
-  <!-- use this as template for new entry !-->
-  <tr>
-    <th></th>
-    <th>Plateforme</th>
-    <th>Version</th>
-    <th>Aller ici</th>
-    <th>Version de LilyPond</th>
-    <th>Packager</th>
-  </tr>
-
-  @devel.ihtml@
+La version 2.7 n'est pas encore accessible.
 
 </table>
 
 
-<h2>T&eacute;l&eacute;charger LilyPond 2.2 -- ancienne version</h2>
+<h2>T&eacute;l&eacute;charger LilyPond 2.4 -- ancienne version</h2>
 
-<a name="2.2"></a>
+<strong>Note</strong> <a name="ec-fonts"></a>
+LilyPond 2.4 n&eacute;cessite le paquet <tt>ec-fonts-mftraced</tt>
+t&eacute;l&eacute;chargeable 
+<a href="http://lilypond.org/download/fonts/">ici</a>
+
+<a name="2.4"></a>
 <table width="100%" border="0" rules="rows" cellpadding="3">
   
   <!-- use this as template for new entry !-->
@@ -84,19 +72,18 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
 
 </table>
 
-
-<p>
-  Si votre plateforme n'est pas list&eacute;e vous pouvez nous aider en
-  <a href="../devel/packaging.html">r&eacute;alisant des paquetages LilyPond</a>.
-</p>
-
+<h2>Anciennes versions</h2>
 <p>
   Si vous estimez que LilyPond &eacute;volue trop vite, essayez une des
   <a href="older-versions.html">plus anciennes versions</a>.
 </p>
 
-
 <h2>Notes</h2>
+
+<p>
+  Si votre plateforme n'est pas list&eacute;e vous pouvez nous aider en
+  <a href="../devel/packaging.html">r&eacute;alisant des paquetages LilyPond</a>.
+</p>
 
 <a name="redhat-notes"></a>
 <a name="mandrake-notes"></a>
