@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.1 
+    Translation of CVS Revision: 1.2 
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -14,7 +14,7 @@
 <h2>Newbies</h2>
 <p>
   D&eacute;butez votre apprentissage avec le
-  <a href="@DOC@v2.4/Documentation/user/out-www/lilypond/Tutorial.html">Tutoriel</a>
+  <a href="@DOC@v2.6/Documentation/user/out-www/lilypond/Tutorial.html">Tutoriel</a>
 </p>
 
 
@@ -29,7 +29,7 @@
 
 <p>
   Si elle n'y est pas, consultez la documentation
-  <a href="@DOC@v2.4">en ligne</a>.  (Pour les versions autres que 2.4,
+  <a href="@DOC@v2.6">en ligne</a>.  (Pour les versions autres que 2.4,
   cliquez <a href="../documentation.html">ici</a>).
 </p>
 
